snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.141111-2.module.sha1
403909d0405d43f3e1bd5f9e606329d1f5d26522